# Floods

./: .gitignore  README.md  app2.py  pyproject.toml  requirements.txt
data/event/: flood_2024-01-01__2024-01-29.tif
data/events_filtered/: flood_2024-01-01__2024-02-19.tif  flood_2024-01-01__2024-04-01.tif  flood_2024-01-29__2024-02-05.tif  flood_2024-02-05__2024-02-19.tif  flood_2024-02-05__2024-02-26.tif  flood_2024-02-05__2024-03-11.tif  flood_2024-02-05__2024-03-25.tif  flood_2024-02-19__2024-02-26.tif  flood_2024-03-11__2024-03-18.tif  flood_2024-03-18__2024-04-01.tif  flood_2024-03-25__2024-04-01.tif  flood_2024-03-25__2024-05-06.tif  flood_2024-04-01__2024-05-13.tif  flood_2024-04-22__2024-04-29.tif  flood_2024-05-20__2024-05-27.tif  flood_2024-06-17__2024-06-24.tif  flood_2024-07-22__2024-07-29.tif  flood_2024-07-29__2024-08-05.tif  flood_2024-08-05__2024-08-12.tif  flood_2024-09-09__2024-11-18.tif  flood_2024-09-16__2024-09-23.tif  flood_2024-09-23__2024-09-30.tif  flood_2024-09-23__2024-10-07.tif  flood_2024-10-07__2024-10-28.tif  flood_2024-11-04__2024-11-11.tif  flood_2024-11-04__2024-11-18.tif  flood_2024-11-11__2024-11-25.tif  flood_2024-11-25__2025-01-06.tif  flood_2024-12-02__2025-01-06.tif  flood_ALL_events.tif
data/events_merged/: flood_2024-01-01__2024-01-15.tif  flood_2024-01-01__2024-01-22.tif  flood_2024-01-01__2024-02-05.tif  flood_2024-01-08__2024-01-15.tif  flood_2024-01-08__2024-02-12.tif  flood_2024-01-15__2024-01-22.tif  flood_2024-01-15__2024-01-29.tif  flood_2024-01-15__2024-02-05.tif  (+99 more)
src/: app.py  appOlder.py
src/data/: scraping.py  (+6 more)
